--- a/index.html
+++ b/index.html
@@ -507,25 +507,38 @@
         
         /* Home block styles */
         .home-block {
+            position: fixed;
+            inset: 0;
+            z-index: 10;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: none;
+        }
+        .home-card {
+            background: var(--card-bg);
+            border-radius: 1.5rem;
+            box-shadow: var(--shadow);
+            border: 1px solid var(--card-border);
+            padding: 3rem 2.5rem 2.5rem 2.5rem;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            min-height: 80vh;
             animation: fadeIn 0.8s;
+            max-width: 95vw;
         }
         .home-title {
-            font-size: 3rem;
+            font-size: 3.2rem;
             font-weight: 900;
             letter-spacing: 2px;
             color: var(--primary);
-            margin-bottom: 2rem;
+            margin-bottom: 2.2rem;
             text-shadow: 0 2px 12px rgba(99,102,241,0.15);
+            text-align: center;
         }
         .home-link {
-            font-size: 1.3rem;
-            font-weight: 600;
-            color: var(--light);
+            font-size: 1.35rem;
+            font-weight: 700;
             background: linear-gradient(90deg, var(--primary), var(--secondary));
             -webkit-background-clip: text;
             background-clip: text;
@@ -533,6 +546,8 @@
             cursor: pointer;
             text-decoration: underline;
             transition: color 0.2s;
+            margin-bottom: 0.5rem;
+            text-align: center;
         }
         .home-link:hover {
             color: var(--primary);
@@ -551,6 +566,17 @@
         .home-block.hidden {
             display: none !important;
         }
+        @media (max-width: 600px) {
+            .home-card {
+                padding: 2rem 1rem 1.5rem 1rem;
+            }
+            .home-title {
+                font-size: 2.1rem;
+            }
+            .home-link {
+                font-size: 1.1rem;
+            }
+        }
     </style>
 </head>
 <body class="dark-mode">
@@ -559,8 +585,8 @@
     
     <!-- Home block -->
     <div class="home-block" id="home-block">
-        <div class="home-title">YouTube</div>
-        <div>
+        <div class="home-card">
+            <div class="home-title">YouTube</div>
             <span class="home-link" id="goto-youtube">YouTube Live Subscriber Counter</span>
         </div>
     </div>
