--- a/index.html
+++ b/index.html
@@ -950,38 +950,31 @@
 
         // Gère la navigation selon l'URL
         function handleRoute() {
-            // Supporte aussi le cas où le chemin finit par /youtube/ (slash final)
             let path = window.location.pathname;
-            // Pour les hébergements statiques (Vercel, etc.), si le fichier n'est pas trouvé, il sert /404 ou /index.html
-            // On tente de détecter si on est sur une page 404 mais avec un hash valide
+            // Si on est sur une page 404 ou index.html (hébergement statique), mais qu'il y a un hash avec un id de chaîne
             if (
-                (path.endsWith('/youtube') || path.endsWith('/youtube/')) ||
-                // Cas Vercel: /404 ou /index.html mais hash d'une chaîne
-                ((path.endsWith('/404') || path.endsWith('/index.html')) &&
-                    window.location.hash &&
-                    window.location.hash.length > 1)
+                (path.endsWith('/404') || path.endsWith('/index.html')) &&
+                window.location.hash &&
+                window.location.hash.length > 1
             ) {
-                // Si on est sur /404 ou /index.html avec un hash, on remplace l'URL par /youtube#id
-                if ((path.endsWith('/404') || path.endsWith('/index.html')) &&
-                    window.location.hash &&
-                    window.location.hash.length > 1) {
-                    window.history.replaceState({}, '', '/youtube' + window.location.hash);
-                }
+                // Redirige vers /youtube#id
+                window.location.replace('/youtube' + window.location.hash);
+                return;
+            }
+
+            // Si on est sur /youtube ou /youtube/ (avec ou sans hash)
+            if (path.replace(/\/+$/, '').endsWith('/youtube')) {
                 showYoutube();
                 init();
+            } else if (
+                (path === '' || path === '/') &&
+                window.location.hash &&
+                window.location.hash.length > 1
+            ) {
+                // Si on est sur la racine avec un hash, redirige vers /youtube#id
+                window.location.replace('/youtube' + window.location.hash);
             } else {
-                // Si on est sur la racine mais qu'il y a un hash (ex: /#id), redirige vers /youtube#id
-                if (
-                    (path === '' || path === '/') &&
-                    window.location.hash &&
-                    window.location.hash.length > 1
-                ) {
-                    window.history.replaceState({}, '', '/youtube' + window.location.hash);
-                    showYoutube();
-                    init();
-                } else {
-                    showHome();
-                }
+                showHome();
             }
         }
 
