--- a/index.html
+++ b/index.html
@@ -992,6 +992,19 @@
             }
         }
 
+        function showHome() {
+            document.getElementById('home-block').classList.remove('hidden');
+            document.getElementById('main-header').classList.add('hidden');
+            document.getElementById('main-container').classList.add('hidden');
+            document.getElementById('main-footer').classList.add('hidden');
+        }
+        function showYoutube() {
+            document.getElementById('home-block').classList.add('hidden');
+            document.getElementById('main-header').classList.remove('hidden');
+            document.getElementById('main-container').classList.remove('hidden');
+            document.getElementById('main-footer').classList.remove('hidden');
+        }
+
         // Clique sur le lien d'accueil
         document.addEventListener('DOMContentLoaded', function() {
             // Ajoute le listener sur le lien d'accueil
