--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 <span class="home-link" id="goto-youtube">YouTube Live Subscriber Counter</span>
             </div>
             <div class="home-card">
-                <div class="home-title" style="color: #1da1f2;">X</div>
+                <div class="home-title" style="color: #1da1f2;">Twitter</div>
                 <span class="home-link" id="goto-twitter" style="background: linear-gradient(90deg,#1da1f2,#6366f1);">Twitter Live Follower Counter</span>
             </div>
         </div>
