--- a/index.html
+++ b/index.html
@@ -907,7 +907,13 @@
             const params = new URLSearchParams(window.location.search);
             if (params.get('minimal') === 'true') {
                 document.body.classList.add('minimal-mode');
-                document.getElementById("counter-container").style.display = "block";
+                // Affiche uniquement le compteur YouTube si on est sur une route YouTube, sinon masque-le
+                if (/\/youtube\/[^\/]+$/.test(window.location.pathname)) {
+                    document.getElementById("counter-container").style.display = "block";
+                    document.getElementById("twitter-counter-container").style.display = "none";
+                } else {
+                    document.getElementById("counter-container").style.display = "none";
+                }
             }
         }
 
@@ -915,57 +921,14 @@
             const params = new URLSearchParams(window.location.search);
             if (params.get('minimal') === 'true') {
                 document.body.classList.add('minimal-mode');
-                document.getElementById("twitter-counter-container").style.display = "block";
+                // Affiche uniquement le compteur Twitter si on est sur une route Twitter, sinon masque-le
+                if (/\/twitter\/[^\/]+$/.test(window.location.pathname)) {
+                    document.getElementById("twitter-counter-container").style.display = "block";
+                    document.getElementById("counter-container").style.display = "none";
+                } else {
+                    document.getElementById("twitter-counter-container").style.display = "none";
+                }
             }
-        }
-
-        function showAlert(message) {
-            const alert = document.createElement('div');
-            alert.className = 'alert';
-            alert.textContent = message;
-            alert.style.position = 'fixed';
-            alert.style.top = '20px';
-            alert.style.left = '50%';
-            alert.style.transform = 'translateX(-50%)';
-            alert.style.backgroundColor = '#ef4444';
-            alert.style.color = 'white';
-            alert.style.padding = '12px 24px';
-            alert.style.borderRadius = '8px';
-            alert.style.boxShadow = '0 4px 12px rgba(0, 0, 0, 0.15)';
-            alert.style.zIndex = '1000';
-            alert.style.animation = 'fadeIn 0.3s ease-out';
-            document.body.appendChild(alert);
-            setTimeout(() => {
-                alert.style.animation = 'fadeOut 0.3s ease-out';
-                setTimeout(() => document.body.removeChild(alert), 300);
-            }, 3000);
-        }
-
-        document.addEventListener('click', function(event) {
-            const shareOptions = document.getElementById('share-options');
-            if (shareOptions && shareOptions.style.display === 'block' && 
-                !event.target.closest('.share-dropdown') && 
-                !event.target.closest('.share-options')) {
-                shareOptions.style.display = 'none';
-            }
-            const twitterShareOptions = document.getElementById('twitter-share-options');
-            if (twitterShareOptions && twitterShareOptions.style.display === 'block' &&
-                !event.target.closest('.share-dropdown') &&
-                !event.target.closest('.share-options')) {
-                twitterShareOptions.style.display = 'none';
-            }
-        });
-
-        function getChannelIdFromPath() {
-            const path = window.location.pathname.replace(/\/+$/, '');
-            const match = path.match(/\/youtube\/([^\/]+)/);
-            return match ? match[1] : null;
-        }
-
-        function getTwitterIdFromPath() {
-            const path = window.location.pathname.replace(/\/+$/, '');
-            const match = path.match(/\/twitter\/([^\/]+)/);
-            return match ? match[1] : null;
         }
 
         function handleRoute() {
@@ -985,6 +948,10 @@
                     intervalId = setInterval(fetchStatsData, 2000);
                 }
                 checkMinimalMode();
+                // Ajoute pour masquer le compteur Twitter si on est sur une route YouTube
+                if (document.getElementById("twitter-counter-container")) {
+                    document.getElementById("twitter-counter-container").style.display = "none";
+                }
             }
             else if (
                 (path === '' || path === '/') &&
@@ -1008,6 +975,10 @@
                 document.getElementById("twitter-results-container").style.display = "none";
                 document.querySelector("#twitter-container .search-card").style.display = "block";
                 checkTwitterMinimalMode();
+                // Ajoute pour masquer le compteur YouTube si on est sur une route Twitter
+                if (document.getElementById("counter-container")) {
+                    document.getElementById("counter-container").style.display = "none";
+                }
             }
             else if (/\/twitter\/[^\/]+$/.test(path)) {
                 showTwitter();
@@ -1024,6 +995,10 @@
                     twitterIntervalId = setInterval(fetchTwitterStats, 2000);
                 }
                 checkTwitterMinimalMode();
+                // Ajoute pour masquer le compteur YouTube si on est sur une route Twitter
+                if (document.getElementById("counter-container")) {
+                    document.getElementById("counter-container").style.display = "none";
+                }
             }
             else if (
                 (path === '' || path === '/') &&
