--- a/index.html
+++ b/index.html
@@ -608,6 +608,26 @@
                 <div class="home-title" style="color: #1da1f2;">Twitter</div>
                 <span class="home-link" id="goto-twitter" style="background: linear-gradient(90deg,#1da1f2,#6366f1);">Twitter Live Follower Counter</span>
             </div>
+            <!-- Bloc Instagram -->
+            <div class="home-card">
+                <div class="home-title" style="color: #e1306c;">
+                    Instagram
+                </div>
+                <span class="home-link" style="background: linear-gradient(90deg,#e1306c,#fdc468); cursor: not-allowed; opacity: 0.7;">
+                    Instagram Live Follower Counter
+                </span>
+                <div style="margin-top: 1rem; color: #e1306c; font-weight: bold; font-size: 1.1rem;">Soon</div>
+            </div>
+            <!-- Bloc TikTok -->
+            <div class="home-card">
+                <div class="home-title" style="color: #000;">
+                    TikTok
+                </div>
+                <span class="home-link" style="background: linear-gradient(90deg,#000,#69c9d0,#ee1d52); cursor: not-allowed; opacity: 0.7;">
+                    TikTok Live Follower Counter
+                </span>
+                <div style="margin-top: 1rem; color: #ee1d52; font-weight: bold; font-size: 1.1rem;">Soon</div>
+            </div>
         </div>
     </div>
     
