--- a/index.html
+++ b/index.html
@@ -614,19 +614,17 @@
                     Instagram
                 </div>
                 <span class="home-link" style="background: linear-gradient(90deg,#e1306c,#fdc468); cursor: not-allowed; opacity: 0.7;">
-                    Instagram Live Follower Counter
+                    Soon!
                 </span>
-                <div style="margin-top: 1rem; color: #e1306c; font-weight: bold; font-size: 1.1rem;">Soon</div>
             </div>
             <!-- Bloc TikTok -->
             <div class="home-card">
                 <div class="home-title" style="color: #000;">
-                    TikTok
+                    Soon!
                 </div>
                 <span class="home-link" style="background: linear-gradient(90deg,#000,#69c9d0,#ee1d52); cursor: not-allowed; opacity: 0.7;">
                     TikTok Live Follower Counter
                 </span>
-                <div style="margin-top: 1rem; color: #ee1d52; font-weight: bold; font-size: 1.1rem;">Soon</div>
             </div>
         </div>
     </div>
