--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                     Soon!
                 </div>
                 <span class="home-link" style="background: linear-gradient(90deg,#000,#69c9d0,#ee1d52); cursor: not-allowed; opacity: 0.7;">
-                    TikTok Live Follower Counter
+                    Soon!
                 </span>
             </div>
         </div>
