--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
             <!-- Bloc TikTok -->
             <div class="home-card">
                 <div class="home-title" style="color: #000;">
-                    Soon!
+                    TikTok
                 </div>
                 <span class="home-link" style="background: linear-gradient(90deg,#000,#69c9d0,#ee1d52); cursor: not-allowed; opacity: 0.7;">
                     Soon!
