--- a/index.html
+++ b/index.html
@@ -601,16 +601,23 @@
     <div class="home-block" id="home-block">
         <div style="display: flex; gap: 2.5rem; align-items: flex-start;">
             <div class="home-card">
-                <div class="home-title">YouTube</div>
+                <div class="home-title">
+                    <i class="fab fa-youtube" style="color:#ff0000; margin-right: 0.5rem;"></i>
+                    YouTube
+                </div>
                 <span class="home-link" id="goto-youtube">YouTube Live Subscriber Counter</span>
             </div>
             <div class="home-card">
-                <div class="home-title" style="color: #1da1f2;">Twitter</div>
+                <div class="home-title" style="color: #1da1f2;">
+                    <i class="fab fa-x-twitter" style="color:#1da1f2; margin-right: 0.5rem;"></i>
+                    Twitter
+                </div>
                 <span class="home-link" id="goto-twitter" style="background: linear-gradient(90deg,#1da1f2,#6366f1);">Twitter Live Follower Counter</span>
             </div>
             <!-- Bloc Instagram -->
             <div class="home-card">
                 <div class="home-title" style="color: #e1306c;">
+                    <i class="fab fa-instagram" style="color:#e1306c; margin-right: 0.5rem;"></i>
                     Instagram
                 </div>
                 <span class="home-link" style="background: linear-gradient(90deg,#e1306c,#fdc468); cursor: not-allowed; opacity: 0.7;">
@@ -620,6 +627,7 @@
             <!-- Bloc TikTok -->
             <div class="home-card">
                 <div class="home-title" style="color: #000;">
+                    <i class="fab fa-tiktok" style="color:#000; margin-right: 0.5rem;"></i>
                     TikTok
                 </div>
                 <span class="home-link" style="background: linear-gradient(90deg,#000,#69c9d0,#ee1d52); cursor: not-allowed; opacity: 0.7;">
