--- a/index.html
+++ b/index.html
@@ -513,85 +513,45 @@
         
         /* Home block styles */
         .home-block {
-            position: fixed;
-            inset: 0;
+            position: static;
             min-height: 100vh;
-            width: 100vw;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(135deg, #232946 0%, #6366f1 100%);
-            z-index: 1;
-            overflow: auto;
-            animation: fadeIn 1.2s;
-        }
-        .home-block::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            z-index: -1;
-            background: radial-gradient(circle at 60% 40%, rgba(99,102,241,0.18) 0%, rgba(16,185,129,0.10) 60%, transparent 100%);
-            pointer-events: none;
-        }
-        .home-block .home-cards-row {
-            display: flex;
-            gap: 3rem;
-            align-items: stretch;
-            justify-content: center;
-            flex-wrap: wrap;
+            align-items: flex-start;
+            justify-content: flex-start;
+            background: none;
         }
         .home-card {
-            background: rgba(15, 23, 42, 0.82);
-            border-radius: 2.2rem;
-            box-shadow: 0 8px 32px 0 rgba(99,102,241,0.18), 0 1.5px 8px rgba(16,185,129,0.09);
-            border: 1.5px solid var(--card-border);
-            padding: 3.2rem 2.7rem 2.5rem 2.7rem;
+            margin: 3rem 0 0 3rem;
+            background: var(--card-bg);
+            border-radius: 1.5rem;
+            box-shadow: var(--shadow);
+            border: 1px solid var(--card-border);
+            padding: 3rem 2.5rem 2.5rem 2.5rem;
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-width: 260px;
-            min-height: 260px;
-            max-width: 320px;
-            transition: var(--transition), box-shadow 0.25s;
-            transform: translateY(0) scale(1);
-            position: relative;
-            overflow: hidden;
-            animation: fadeIn 0.9s cubic-bezier(.16,1,.3,1);
-        }
-        .home-card::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            border-radius: 2.2rem;
-            pointer-events: none;
-            box-shadow: 0 0 0 0 rgba(99,102,241,0.15);
-            transition: box-shadow 0.25s;
+            animation: fadeIn 0.8s;
+            max-width: 95vw;
+            transition: var(--transition);
+            transform: translateY(0);
         }
         .home-card:hover {
-            transform: translateY(-18px) scale(1.045) rotate(-1.5deg);
-            box-shadow: 0 24px 56px -8px rgba(99,102,241,0.26), 0 8px 32px -8px rgba(16,185,129,0.13), 0 2px 8px rgba(0,0,0,0.13);
+            transform: translateY(-22px) scale(1.035) rotate(-1.5deg);
+            box-shadow: 0 36px 56px -10px rgba(99,102,241,0.23), 0 10px 36px -10px rgba(16,185,129,0.13), 0 2px 8px rgba(0,0,0,0.12);
             border-color: var(--primary);
             z-index: 2;
         }
-        .home-card:hover::after {
-            box-shadow: 0 0 32px 8px rgba(99,102,241,0.18);
-        }
         .home-title {
-            font-size: 2.5rem;
+            font-size: 3.2rem;
             font-weight: 900;
-            letter-spacing: 1.5px;
+            letter-spacing: 2px;
             color: var(--primary);
             margin-bottom: 2.2rem;
-            text-shadow: 0 2px 12px rgba(99,102,241,0.13);
+            text-shadow: 0 2px 12px rgba(99,102,241,0.15);
             text-align: center;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            justify-content: center;
-            user-select: none;
         }
         .home-link {
-            font-size: 1.25rem;
+            font-size: 1.35rem;
             font-weight: 700;
             background: linear-gradient(90deg, var(--primary), var(--secondary));
             -webkit-background-clip: text;
@@ -599,11 +559,9 @@
             color: transparent;
             cursor: pointer;
             text-decoration: underline;
-            transition: color 0.2s, text-shadow 0.2s;
+            transition: color 0.2s;
             margin-bottom: 0.5rem;
             text-align: center;
-            text-shadow: 0 1px 8px rgba(99,102,241,0.09);
-            user-select: none;
         }
         .home-link:hover {
             color: var(--primary);
@@ -611,45 +569,26 @@
             -webkit-background-clip: unset;
             background-clip: unset;
             color: var(--primary);
-            text-shadow: 0 2px 16px rgba(99,102,241,0.18);
         }
-        .home-link[style*="not-allowed"] {
-            pointer-events: none;
-            filter: grayscale(0.2);
+        /* Hide container by default for home */
+        .container.hidden,
+        .header.hidden,
+        .footer.hidden {
+            display: none !important;
         }
-        @media (max-width: 900px) {
-            .home-block .home-cards-row {
-                gap: 1.5rem;
-            }
-            .home-card {
-                min-width: 220px;
-                max-width: 95vw;
-                padding: 2.2rem 1.2rem 1.2rem 1.2rem;
-            }
-            .home-title {
-                font-size: 1.5rem;
-            }
-            .home-link {
-                font-size: 1rem;
-            }
+        /* Hide home block for /youtube */
+        .home-block.hidden {
+            display: none !important;
         }
         @media (max-width: 600px) {
-            .home-block .home-cards-row {
-                flex-direction: column;
-                align-items: center;
-                gap: 1.2rem;
-            }
             .home-card {
-                min-width: 0;
-                width: 90vw;
-                max-width: 98vw;
-                padding: 1.5rem 0.7rem 1rem 0.7rem;
+                padding: 2rem 1rem 1.5rem 1rem;
             }
             .home-title {
-                font-size: 1.1rem;
+                font-size: 2.1rem;
             }
             .home-link {
-                font-size: 0.95rem;
+                font-size: 1.1rem;
             }
         }
     </style>
@@ -660,7 +599,14 @@
     
     <!-- Home block -->
     <div class="home-block" id="home-block">
-        <div class="home-cards-row">
+        <!-- Ajout du logo FastCount -->
+        <div style="width:100%;display:flex;flex-direction:column;align-items:flex-start;">
+            <a href="#" class="logo" style="font-size:2.2rem;margin:2rem 0 1.5rem 3rem;display:flex;align-items:center;gap:0.75rem;text-decoration:none;">
+                <i class="fas fa-chart-line logo-icon" style="font-size:2.5rem;color:#6366f1;"></i>
+                <span style="font-weight:800;color:#f8fafc;letter-spacing:1px;">FastCount</span>
+            </a>
+        </div>
+        <div style="display: flex; gap: 2.5rem; align-items: flex-start;">
             <div class="home-card">
                 <div class="home-title">
                     <i class="fab fa-youtube" style="color:#ff0000; margin-right: 0.5rem;"></i>
