--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
         }
         /* Home block styles */
         .home-block {
+            font-family: 'Inter', sans-serif;
             position: static;
             min-height: 100vh;
             display: flex;
@@ -479,12 +480,14 @@
             transform: translateY(0);
         }
         .home-card:hover {
+            font-family: 'Inter', sans-serif;
             transform: translateY(-22px) scale(1.035) rotate(-1.5deg);
             box-shadow: 0 36px 56px -10px rgba(79,140,255,0.18), 0 10px 36px -10px rgba(94,234,212,0.10), 0 2px 8px rgba(0,0,0,0.12);
             border-color: var(--primary);
             z-index: 2;
         }
         .home-title {
+            font-family: 'Inter', sans-serif;
             font-size: 3.2rem;
             font-weight: 900;
             letter-spacing: 2px;
@@ -494,6 +497,7 @@
             text-align: center;
         }
         .home-link {
+            font-family: 'Inter', sans-serif;
             font-size: 1.35rem;
             font-weight: 700;
             color: var(--primary);
@@ -504,6 +508,7 @@
             text-align: center;
         }
         .home-link:hover {
+            font-family: 'Inter', sans-serif;
             color: var(--primary);
             background: none;
             -webkit-background-clip: unset;
@@ -522,12 +527,15 @@
         }
         @media (max-width: 600px) {
             .home-card {
+                font-family: 'Inter', sans-serif;
                 padding: 2rem 1rem 1.5rem 1rem;
             }
             .home-title {
+                font-family: 'Inter', sans-serif;
                 font-size: 2.1rem;
             }
             .home-link {
+                font-family: 'Inter', sans-serif;
                 font-size: 1.1rem;
             }
         }
